# serverless-HF-Test

./: Dockerfile  indicTrans_serverless.py  main.py  pyproject.toml  serverless.py  test_input.json
